Fixed alignment on header right links

--- a/css/main.css
+++ b/css/main.css
@@ -60,9 +60,10 @@ a:visited{
 }
 .header-link{
     padding: 5px;
-    margin: 0px 15px 5px 0px;
+    margin: 5px 15px 5px 0px;
     color: rgb(34, 34, 34);
     font-size: 13px;
+    vertical-align: middle;
 }
 #header-button-container{
     flex: 2;
